--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 <body>
 
   <!-- initial page -->
-  <div class="wordInputContainer">
+  <div id="wordInputContainer">
     <img id ="logo" src="BBLogo.png" alt="logo">
     <form>
       <input id="wordInput" type="text" placeholder="Give us a word"/>
@@ -16,7 +16,7 @@
   </div>
 
   <!-- definition page -->
-  <div class="definitionPage">
+  <div id="definitionPage">
     <h1 id="word">Word</h1>
     <p id="definition">Definition</p>
     <button id="reset">Search Another Word</button>
